kuber/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-bg
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kuber-bg
  template:
    metadata:
      labels:
        app: kuber-bg
    spec:
      containers:
      - name: kuber-bg
        image: kuber:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 3000
