kuber/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  kuber-bg-service
spec:
  selector:
    app: kuber-bg 
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  3000
